# ttf2uv

./: README.md  pyproject.toml
src/ttftouv/: BinaryReader.py  CMap.py  CMapTable.py  Glyf.py  HeadTable.py  TTFReader.py  Table.py  TableDirectory.py  helpers.py
src/ttftouv/cmap/: CMapTable.py  CmapSubtable.py  SubtableFormat12.py  SubtableFormat4.py  SubtableFormat4Constants.py
src/ttftouv/glyf/: Glyf.py  GlyfTable.py
tests/: test_binary_reader.py
